--- a/package.json
+++ b/package.json
@@ -4,14 +4,30 @@
   "private": true,
   "homepage": "https://lespan14.github.io/portfolio-demo",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.1",
+    "@mui/styled-engine-sc": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "html-react-parser": "^1.4.8",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-native-maps": "^0.30.1",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
+    "react-social-icons": "^5.9.0",
+    "react-typed": "^1.2.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +58,17 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lespan14/portfolio-demo.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lespan14/portfolio-demo/issues"
   }
 }
